--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                           <!-- Team Member 4 -->
                         <div class="team-card rounded-2xl p-8 text-center stagger">
                             <div class="w-32 h-32 bg-gradient-to-r from-yellow-500 to-orange-500 rounded-full mx-auto mb-6 flex items-center justify-center">
-                                <img src="https://image2url.com/images/1754912990325-b8d81f7a-a489-4ff8-bbda-e0e4cb28b8ad.png" 
+                                <img src="https://i.ibb.co/20bvrvck/Whats-App-Image-2025-08-13-at-11-08-23-32c4b09b.jpg" 
                                      alt="Kumud Sharma" class="w-28 h-28 rounded-full object-cover">
                             </div>
                             <h3 class="text-2xl font-bold text-white mb-2">Kumud Sharma</h3>
@@ -948,3 +948,4 @@
     </script>
 </body>
 </html>
+
