--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
                             
                             <!-- Enhanced Social Media Links -->
                             <div class="flex justify-center space-x-3 mb-4">
-                                <a href="https://www.instagram.com/prateek_singh.__/" target="_blank" class="social-link instagram" title="Instagram">
+                                <a href="https://instagram.com/prateek_singh.__" target="_blank" class="social-link instagram" title="Instagram">
                                     <i class="fab fa-instagram text-xl"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/prateek-singh99/" target="_blank" class="social-link linkedin" title="LinkedIn">
