--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                                 <a href="https://instagram.com/prateek_singh.__" target="_blank" class="social-link instagram" title="Instagram">
                                     <i class="fab fa-instagram text-xl"></i>
                                 </a>
-                                <a href="https://www.linkedin.com/in/prateek-singh99/" target="_blank" class="social-link linkedin" title="LinkedIn">
+                                <a href="https://www.linkedin.com/in/prateek-singh99" target="_blank" class="social-link linkedin" title="LinkedIn">
                                     <i class="fab fa-linkedin text-xl"></i>
                                 </a>
                                 <a href="https://github.com/Prateek062003" target="_blank" class="social-link github" title="GitHub">
@@ -1370,3 +1370,4 @@
 </body>
 </html>
 w
+
